--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
     - Global Hydroviewer: hydroviewer.md
   - Retrospective Data and Validation:
     - Derivation: deriv.md
+    - Bias Correction: bias_correct.md
   - Forecast Data:
     - Ensembles: ensemble.md
     - Statistics: stats.md
