--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ nav:
   - Forecast Data:
     - Ensembles: ensemble.md
     - Statistics: stats.md
+    - Validation: forecast_validation.md
   - Social Impact:
     - Overview: social-impact.md
     - Use Cases: use-cases.md
