--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,8 +4,8 @@ nav:
   - Accessing Data:
     - GEOGloWS HydroFabric: Accessing-Data/hydrofabric.md
     - Using the GEOGloWS HydroViewer: Accessing-Data/hydroviewer.md
-    - Programmatic Access: Accessing-Data/data-sources.md
-    - Bulk Data Download (AWS): Accessing-Data/data-aws.md
+    - Programmatic Access: Accessing-Data/programmatic-access.md
+    - Bulk Data Download (AWS): Accessing-Data/bulk-download.md
   - Retrospective Data and Validation:
     - Derivation: Retrospective-Data/deriv.md
     - Return Periods & Daily Data: Retrospective-Data/return.md
