--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: ci
 on:
     push:
         branches:
-            - main
+            - feature/gh-pages
 permissions:
     contents: write
 jobs:
