update ci.yml & mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: GEOGLOWS Training
-site_url: https://mydomain.org/mysite
+site_url: https://Sonia-96.github.io/training.geoglows.org/
 theme:
   name: material
   palette:
