--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,18 +24,20 @@ theme:
 nav:
   - Home: index.md
   - Overview: overview.md
-  - Part 1 Available Data:
-      - GIS Data: GIS-data.md
-      - Retrospective: retrospective.md
-      - Forecast Data: forecast.md
-  - Part 2 Accessing Data:
-      - The Data Catalog: data-catalog.md
-      - The Data Service: data-service.md
-      - A Web Application: web-app.md
-      - The Web Map: web_map.md
-  - Part 3 Skills and Examples:
-      - Accessing and Inpretting Data: exercises.md
-      - Bias Correction and SABER Overview: bias-correction.md
-      - Bias Correction for Forecast Data: forecasted-bias-correction.md
+  - River Forecasting System:
+      - Part 1 Available Data:
+          - GIS Data: GIS-data.md
+          - Retrospective Data: retrospective.md
+          - Forecast Data: forecast.md
+      - Part 2 Accessing Data:
+          - The Data Catalog: data-catalog.md
+          - The Data Service: data-service.md
+          - A Web Application: web-app.md
+          - The Web Map: web_map.md
+      - Part 3 Skills and Examples:
+          - Accessing and Interpreting Data: exercises.md
+          - Bias Correction and SABER Overview: bias-correction.md
+          - Bias Correction for Forecast Data: forecasted-bias-correction.md
+
 
 
