changed some stuff in the overview page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,7 +23,7 @@ theme:
 
 nav:
   - Home: index.md
-  - Overview: overview copy.md
+  - Overview: overview.md
   - River Forecast System:
       - Part 1 Available Data:
           - GIS Data: rfs/available_data/GIS-data.md
