--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,22 @@
 site_name: GEOGLOWS Training
 markdown_extensions:
   - attr_list
+  - admonition
+  - pymdownx.snippets
+  - pymdownx.details
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
 theme:
+  features:
+    - content.code.copy
+    - content.code.select
+    - navigation.expand
+    - navigation.path
+    - navigation.footer
+    - toc.follow
   name: material
   palette:
     # Palette toggle for light mode
@@ -28,16 +43,17 @@ nav:
           - Forecast Data: rfs/datasets/forecast.md
       - Part 2 Accessing Data:
           - Data Catalog: rfs/accessing-data/data-catalog.md
-          - Querying Data: rfs/accessing-data/querying-data.md
-          - Bulk Downloads: rfs/accessing-data/bulk-downloads.md
+          - Querying Data: rfs/accessing-data/query-data.md
+          - Bulk Downloads: rfs/accessing-data/bulk-download.md
+          - API (Data Service): rfs/accessing-data/data-service.md
           - Web Maps: rfs/accessing-data/web-map.md
           - Web App: rfs/accessing-data/web-app.md
-          - API (Data Service): rfs/accessing-data/data-service.md
       - Part 3 Application Tutorials:
-          - Accessing and Interpreting Data: rfs/tutorials/exercises.md
-          - Cookbook: rfs/tutorials/cookbook.md
-          - Status and Outlook: rfs/tutorials/status.md
+          - Finding River Numbers: rfs/tutorials/find-river-numbers.md
+          - Accessing Data: rfs/tutorials/exercises.md
+          - Cookbook: rfs/tutorials/code-snippets.md
+          - Status and Outlook: rfs/tutorials/status-outlook.md
       - Part 4 Bias Correction:
           - SABER Method: rfs/bias-correction/bias-correction.md
           - Correcting Forecasts: rfs/bias-correction/forecasted-bias-correction.md
-  - Publications: publications.md
+      - Publications: publications.md
