Update title for rfs-v2-webinar-1 to "GEOGLOWS History and Introducing RFS Version 2"
- Makes the title more descriptive of the webinar content
- Improved title length provides better page layout

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -96,4 +96,4 @@ nav:
           - Correcting Forecasts: rfs/bias-correction/forecasted-bias-correction.md
       - Publications: rfs/publications.md
   - Webinars:
-      - "GEOGLOWS RFS v2 Webinar # 1": webinars/rfs-v2-webinar-1.md
+      - "1. GEOGLOWS History and Introducing RFS Version 2": webinars/rfs-v2-webinar-1.md
