--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -97,3 +97,4 @@ nav:
       - Publications: rfs/publications.md
   - Webinars:
       - "1. GEOGLOWS History and Introducing RFS Version 2": webinars/rfs-v2-webinar-1.md
+      - "2. GEOGLOWS Model Formulation": webinars/rfs-v2-webinar-2.md
