--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -98,3 +98,4 @@ nav:
   - Webinars:
       - "1. GEOGLOWS History and Introducing RFS Version 2": webinars/rfs-v2-webinar-1.md
       - "2. GEOGLOWS Model Formulation": webinars/rfs-v2-webinar-2.md
+      - "3. GEOGLOWS Available Data": webinars/rfs-v2-webinar-3.md
